// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildAccountRoleRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "datadog_account:local-integration",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "name": "Local Integration",
          },
        },
      ],
      "_type": "datadog_account",
      "createdOn": undefined,
      "displayName": "Local Integration",
      "name": "Local Integration",
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:c680f6ee-a642-11ed-a333-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T17:22:04.673Z,
              "modifiedAt": 2023-02-06T17:22:04.718Z,
              "name": "Datadog Admin Role",
              "userCount": 3,
            },
            "id": "c680f6ee-a642-11ed-a333-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "984d2f00-d3b4-11e8-a200-bb47109e9987",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5e605652-dd12-11e8-9e53-375565b8970e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "62cc036c-dd12-11e8-9e54-db9995643092",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f66600e-dd12-11e8-9e55-7f30fbb45e73",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7d7c98ac-dd12-11e8-9e56-93700598622d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "811ac4ca-dd12-11e8-9e57-676a7f0beef9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "84aa3ae4-dd12-11e8-9e58-a373a514ccd0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "87b00304-dd12-11e8-9e59-cbeb5f71f72f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "979df720-aed7-11e9-99c6-a7eb8373165a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6831-d3d8-11e9-a77a-4fd230ddbc6a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6832-d3d8-11e9-a77a-bf8a2607f864",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "48ef71ea-d8b1-11e9-a77a-93f408470ad0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4d87d5f8-d8b1-11e9-a77a-eb9c8350d04f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1af86ce4-7823-11ea-93dc-d7cad1b1c6cb",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b382b982-8535-11ea-93de-2bf1bdf20798",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7314eb20-aa58-11ea-95e2-6fb6e4a451d5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7b516476-aa58-11ea-95e2-93718cd56369",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "80de1ec0-aa58-11ea-95e2-aff381626d5d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c1680d0-ff6d-11eb-a494-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "9ac1d8cc-e707-11ea-aa2d-73d37e989a9d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "9de604d8-e707-11ea-aa2d-93f1a783b3a3",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301da-ec5c-11ea-aa9f-73bedeab67ee",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301db-ec5c-11ea-aa9f-2fe72193d60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301dc-ec5c-11ea-aa9f-13b33f8f46ea",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301dd-ec5c-11ea-aa9f-97edfb345bc9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301de-ec5c-11ea-aa9f-a73252c24806",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301df-ec5c-11ea-aa9f-970a9ae645e5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e0-ec5c-11ea-aa9f-6ba6cc675d8c",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e1-ec5c-11ea-aa9f-afa39f6f3e36",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e2-ec5c-11ea-aa9f-1f511b7305fd",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e4-ec5c-11ea-aa9f-87282b3a50cc",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "07c3c146-f7f8-11ea-acf6-0bd62b9ae60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "2fbdac76-f923-11ea-adbc-07f3823e2b43",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "372896c4-f923-11ea-adbc-4fecd107156d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "3e4d4d28-f923-11ea-adbc-e3565938c12e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4628ca54-f923-11ea-adbc-4b2b7f88c5e9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4ada6e36-f923-11ea-adbc-0788e5c5e3cf",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5025ee24-f923-11ea-adbc-576ea241df8d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "55f4b5ec-f923-11ea-adbc-1bfa2334a755",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c6b88e2-f923-11ea-adbc-abf57d079420",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "642eebe6-f923-11ea-adbc-eb617674ea04",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6ba32d22-0e1a-11eb-ba44-bf9a5aafaa39",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "a42e94b2-1476-11eb-bd08-efda28c04248",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "43fa188e-2dce-11eb-84c0-835ad1fd6287",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "465cfe66-2dce-11eb-84c0-6baa888239fa",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4916eebe-2dce-11eb-84c0-271cb2c672e8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4e3f02b4-2dce-11eb-84c0-2fca946a6efc",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "53950c54-2dce-11eb-84c0-a79ae108f6f8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5cbe5f9c-2dce-11eb-84c0-872d3e9f1076",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "61765026-2dce-11eb-84c0-833e230d1b8f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "04bc1cf2-340a-11eb-873a-43b973c760dd",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8106300a-54f7-11eb-8cbc-7781a434a67b",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edfd5e74-801f-11eb-96d8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edfd5e75-801f-11eb-96d8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "bf0dcf7c-90af-11eb-9b82-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "bf0dcf7d-90af-11eb-9b82-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7df222b6-a45c-11eb-a0af-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f4-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f5-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc211-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20f-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc210-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1c-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1d-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7d422c-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba2f2d8-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba4caa4-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "34438974-1703-11ec-9521-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec69c9ae-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec6a85f6-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0c07b512-56a4-11ec-9d67-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "e2371690-574f-11ec-9b69-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbe76fe-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbeed46-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc8e272-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc97610-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc93150-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc821fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc894fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caeae1ea-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "3f036aae-966b-11ec-87f8-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "20c31f82-b9b4-11ec-8235-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6df8628a-c59e-11ec-9bfe-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "10292ba2-d5e9-11ec-88e7-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "102a0414-d5e9-11ec-88e7-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b8006c56-e5c4-11ec-bfd9-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee6d434-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee61788-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "279926d0-f311-11ec-9321-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb17ed8-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb0ad50-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "55840f46-1761-11ed-996f-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "69e8902a-1cd8-11ed-ad41-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4244b3e6-248a-11ed-96ae-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f2161f6-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f21ab3e-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f208ea2-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f210b2a-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841eaad4-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841f1d52-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f81882c-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f807a68-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8143ee-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f81cfe4-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8289ca-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "277f3524-7d61-11ed-9f04-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675704124673,
      "createdOn": undefined,
      "displayName": "Datadog Admin Role",
      "id": "c680f6ee-a642-11ed-a333-da7ad0900005",
      "modifiedAt": 1675704124718,
      "name": "Datadog Admin Role",
      "userCount": 3,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:c69142e2-a642-11ed-a333-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T17:22:04.781Z,
              "modifiedAt": 2023-02-06T17:22:04.804Z,
              "name": "Datadog Read Only Role",
              "userCount": 0,
            },
            "id": "c69142e2-a642-11ed-a333-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "5e605652-dd12-11e8-9e53-375565b8970e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f66600e-dd12-11e8-9e55-7f30fbb45e73",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1af86ce4-7823-11ea-93dc-d7cad1b1c6cb",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b382b982-8535-11ea-93de-2bf1bdf20798",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7314eb20-aa58-11ea-95e2-6fb6e4a451d5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "80de1ec0-aa58-11ea-95e2-aff381626d5d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5025ee24-f923-11ea-adbc-576ea241df8d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "43fa188e-2dce-11eb-84c0-835ad1fd6287",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4916eebe-2dce-11eb-84c0-271cb2c672e8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f4-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1c-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7d422c-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba2f2d8-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec69c9ae-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "e2371690-574f-11ec-9b69-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbe76fe-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc8e272-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc821fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb0ad50-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "69e8902a-1cd8-11ed-ad41-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f2161f6-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f208ea2-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841eaad4-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "277f3524-7d61-11ed-9f04-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675704124781,
      "createdOn": undefined,
      "displayName": "Datadog Read Only Role",
      "id": "c69142e2-a642-11ed-a333-da7ad0900005",
      "modifiedAt": 1675704124804,
      "name": "Datadog Read Only Role",
      "userCount": 0,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:c689fed8-a642-11ed-a5ee-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T17:22:04.733Z,
              "modifiedAt": 2023-02-06T17:22:04.768Z,
              "name": "Datadog Standard Role",
              "userCount": 0,
            },
            "id": "c689fed8-a642-11ed-a5ee-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "984d2f00-d3b4-11e8-a200-bb47109e9987",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5e605652-dd12-11e8-9e53-375565b8970e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "62cc036c-dd12-11e8-9e54-db9995643092",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f66600e-dd12-11e8-9e55-7f30fbb45e73",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7d7c98ac-dd12-11e8-9e56-93700598622d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "811ac4ca-dd12-11e8-9e57-676a7f0beef9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "84aa3ae4-dd12-11e8-9e58-a373a514ccd0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "979df720-aed7-11e9-99c6-a7eb8373165a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6831-d3d8-11e9-a77a-4fd230ddbc6a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6832-d3d8-11e9-a77a-bf8a2607f864",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "48ef71ea-d8b1-11e9-a77a-93f408470ad0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4d87d5f8-d8b1-11e9-a77a-eb9c8350d04f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1af86ce4-7823-11ea-93dc-d7cad1b1c6cb",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b382b982-8535-11ea-93de-2bf1bdf20798",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7314eb20-aa58-11ea-95e2-6fb6e4a451d5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7b516476-aa58-11ea-95e2-93718cd56369",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "80de1ec0-aa58-11ea-95e2-aff381626d5d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c1680d0-ff6d-11eb-a494-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "9ac1d8cc-e707-11ea-aa2d-73d37e989a9d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301da-ec5c-11ea-aa9f-73bedeab67ee",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301db-ec5c-11ea-aa9f-2fe72193d60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301dd-ec5c-11ea-aa9f-97edfb345bc9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e4-ec5c-11ea-aa9f-87282b3a50cc",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "07c3c146-f7f8-11ea-acf6-0bd62b9ae60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "372896c4-f923-11ea-adbc-4fecd107156d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4628ca54-f923-11ea-adbc-4b2b7f88c5e9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4ada6e36-f923-11ea-adbc-0788e5c5e3cf",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5025ee24-f923-11ea-adbc-576ea241df8d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "55f4b5ec-f923-11ea-adbc-1bfa2334a755",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c6b88e2-f923-11ea-adbc-abf57d079420",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "642eebe6-f923-11ea-adbc-eb617674ea04",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6ba32d22-0e1a-11eb-ba44-bf9a5aafaa39",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "43fa188e-2dce-11eb-84c0-835ad1fd6287",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4916eebe-2dce-11eb-84c0-271cb2c672e8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5cbe5f9c-2dce-11eb-84c0-872d3e9f1076",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "61765026-2dce-11eb-84c0-833e230d1b8f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8106300a-54f7-11eb-8cbc-7781a434a67b",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f4-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc211-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20f-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc210-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1c-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1d-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7d422c-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba2f2d8-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba4caa4-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "34438974-1703-11ec-9521-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec69c9ae-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec6a85f6-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "e2371690-574f-11ec-9b69-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbe76fe-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc8e272-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc97610-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc93150-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc821fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc894fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caeae1ea-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "20c31f82-b9b4-11ec-8235-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6df8628a-c59e-11ec-9bfe-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee6d434-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee61788-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb17ed8-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb0ad50-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "69e8902a-1cd8-11ed-ad41-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4244b3e6-248a-11ed-96ae-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f2161f6-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f21ab3e-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f208ea2-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f210b2a-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841eaad4-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841f1d52-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f81882c-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8143ee-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8289ca-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "277f3524-7d61-11ed-9f04-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675704124733,
      "createdOn": undefined,
      "displayName": "Datadog Standard Role",
      "id": "c689fed8-a642-11ed-a5ee-da7ad0900005",
      "modifiedAt": 1675704124768,
      "name": "Datadog Standard Role",
      "userCount": 0,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:fbf4ab24-a668-11ed-b70b-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T21:55:35.227Z,
              "modifiedAt": 2023-02-06T21:55:35.257Z,
              "name": "J1 Ingestion",
              "userCount": 1,
            },
            "id": "fbf4ab24-a668-11ed-b70b-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301da-ec5c-11ea-aa9f-73bedeab67ee",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675720535227,
      "createdOn": undefined,
      "displayName": "J1 Ingestion",
      "id": "fbf4ab24-a668-11ed-b70b-da7ad0900005",
      "modifiedAt": 1675720535257,
      "name": "J1 Ingestion",
      "userCount": 1,
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "datadog_account:local-integration",
      "_key": "datadog_account:local-integration|has|datadog_role:c680f6ee-a642-11ed-a333-da7ad0900005",
      "_toEntityKey": "datadog_role:c680f6ee-a642-11ed-a333-da7ad0900005",
      "_type": "datadog_account_has_role",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "datadog_account:local-integration",
      "_key": "datadog_account:local-integration|has|datadog_role:c69142e2-a642-11ed-a333-da7ad0900005",
      "_toEntityKey": "datadog_role:c69142e2-a642-11ed-a333-da7ad0900005",
      "_type": "datadog_account_has_role",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "datadog_account:local-integration",
      "_key": "datadog_account:local-integration|has|datadog_role:c689fed8-a642-11ed-a5ee-da7ad0900005",
      "_toEntityKey": "datadog_role:c689fed8-a642-11ed-a5ee-da7ad0900005",
      "_type": "datadog_account_has_role",
      "displayName": "HAS",
    },
    Object {
      "_class": "HAS",
      "_fromEntityKey": "datadog_account:local-integration",
      "_key": "datadog_account:local-integration|has|datadog_role:fbf4ab24-a668-11ed-b70b-da7ad0900005",
      "_toEntityKey": "datadog_role:fbf4ab24-a668-11ed-b70b-da7ad0900005",
      "_type": "datadog_account_has_role",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "datadog_account",
    "datadog_role",
    "datadog_account_has_role",
  ],
  "numCollectedEntities": 5,
  "numCollectedRelationships": 4,
}
`;

exports[`#fetchRoles should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:c680f6ee-a642-11ed-a333-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T17:22:04.673Z,
              "modifiedAt": 2023-02-06T17:22:04.718Z,
              "name": "Datadog Admin Role",
              "userCount": 3,
            },
            "id": "c680f6ee-a642-11ed-a333-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "984d2f00-d3b4-11e8-a200-bb47109e9987",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5e605652-dd12-11e8-9e53-375565b8970e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "62cc036c-dd12-11e8-9e54-db9995643092",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f66600e-dd12-11e8-9e55-7f30fbb45e73",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7d7c98ac-dd12-11e8-9e56-93700598622d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "811ac4ca-dd12-11e8-9e57-676a7f0beef9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "84aa3ae4-dd12-11e8-9e58-a373a514ccd0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "87b00304-dd12-11e8-9e59-cbeb5f71f72f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "979df720-aed7-11e9-99c6-a7eb8373165a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6831-d3d8-11e9-a77a-4fd230ddbc6a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6832-d3d8-11e9-a77a-bf8a2607f864",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "48ef71ea-d8b1-11e9-a77a-93f408470ad0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4d87d5f8-d8b1-11e9-a77a-eb9c8350d04f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1af86ce4-7823-11ea-93dc-d7cad1b1c6cb",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b382b982-8535-11ea-93de-2bf1bdf20798",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7314eb20-aa58-11ea-95e2-6fb6e4a451d5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7b516476-aa58-11ea-95e2-93718cd56369",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "80de1ec0-aa58-11ea-95e2-aff381626d5d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c1680d0-ff6d-11eb-a494-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "9ac1d8cc-e707-11ea-aa2d-73d37e989a9d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "9de604d8-e707-11ea-aa2d-93f1a783b3a3",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301da-ec5c-11ea-aa9f-73bedeab67ee",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301db-ec5c-11ea-aa9f-2fe72193d60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301dc-ec5c-11ea-aa9f-13b33f8f46ea",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301dd-ec5c-11ea-aa9f-97edfb345bc9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301de-ec5c-11ea-aa9f-a73252c24806",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301df-ec5c-11ea-aa9f-970a9ae645e5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e0-ec5c-11ea-aa9f-6ba6cc675d8c",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e1-ec5c-11ea-aa9f-afa39f6f3e36",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e2-ec5c-11ea-aa9f-1f511b7305fd",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e4-ec5c-11ea-aa9f-87282b3a50cc",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "07c3c146-f7f8-11ea-acf6-0bd62b9ae60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "2fbdac76-f923-11ea-adbc-07f3823e2b43",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "372896c4-f923-11ea-adbc-4fecd107156d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "3e4d4d28-f923-11ea-adbc-e3565938c12e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4628ca54-f923-11ea-adbc-4b2b7f88c5e9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4ada6e36-f923-11ea-adbc-0788e5c5e3cf",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5025ee24-f923-11ea-adbc-576ea241df8d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "55f4b5ec-f923-11ea-adbc-1bfa2334a755",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c6b88e2-f923-11ea-adbc-abf57d079420",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "642eebe6-f923-11ea-adbc-eb617674ea04",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6ba32d22-0e1a-11eb-ba44-bf9a5aafaa39",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "a42e94b2-1476-11eb-bd08-efda28c04248",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "43fa188e-2dce-11eb-84c0-835ad1fd6287",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "465cfe66-2dce-11eb-84c0-6baa888239fa",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4916eebe-2dce-11eb-84c0-271cb2c672e8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4e3f02b4-2dce-11eb-84c0-2fca946a6efc",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "53950c54-2dce-11eb-84c0-a79ae108f6f8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5cbe5f9c-2dce-11eb-84c0-872d3e9f1076",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "61765026-2dce-11eb-84c0-833e230d1b8f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "04bc1cf2-340a-11eb-873a-43b973c760dd",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8106300a-54f7-11eb-8cbc-7781a434a67b",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edfd5e74-801f-11eb-96d8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edfd5e75-801f-11eb-96d8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "bf0dcf7c-90af-11eb-9b82-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "bf0dcf7d-90af-11eb-9b82-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7df222b6-a45c-11eb-a0af-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f4-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f5-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc211-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20f-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc210-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1c-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1d-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7d422c-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba2f2d8-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba4caa4-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "34438974-1703-11ec-9521-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec69c9ae-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec6a85f6-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0c07b512-56a4-11ec-9d67-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "e2371690-574f-11ec-9b69-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbe76fe-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbeed46-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc8e272-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc97610-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc93150-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc821fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc894fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caeae1ea-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "3f036aae-966b-11ec-87f8-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "20c31f82-b9b4-11ec-8235-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6df8628a-c59e-11ec-9bfe-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "10292ba2-d5e9-11ec-88e7-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "102a0414-d5e9-11ec-88e7-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b8006c56-e5c4-11ec-bfd9-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee6d434-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee61788-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "279926d0-f311-11ec-9321-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb17ed8-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb0ad50-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "55840f46-1761-11ed-996f-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "69e8902a-1cd8-11ed-ad41-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4244b3e6-248a-11ed-96ae-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f2161f6-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f21ab3e-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f208ea2-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f210b2a-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841eaad4-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841f1d52-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f81882c-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f807a68-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8143ee-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f81cfe4-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8289ca-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "277f3524-7d61-11ed-9f04-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675704124673,
      "createdOn": undefined,
      "displayName": "Datadog Admin Role",
      "id": "c680f6ee-a642-11ed-a333-da7ad0900005",
      "modifiedAt": 1675704124718,
      "name": "Datadog Admin Role",
      "userCount": 3,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:c69142e2-a642-11ed-a333-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T17:22:04.781Z,
              "modifiedAt": 2023-02-06T17:22:04.804Z,
              "name": "Datadog Read Only Role",
              "userCount": 0,
            },
            "id": "c69142e2-a642-11ed-a333-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "5e605652-dd12-11e8-9e53-375565b8970e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f66600e-dd12-11e8-9e55-7f30fbb45e73",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1af86ce4-7823-11ea-93dc-d7cad1b1c6cb",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b382b982-8535-11ea-93de-2bf1bdf20798",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7314eb20-aa58-11ea-95e2-6fb6e4a451d5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "80de1ec0-aa58-11ea-95e2-aff381626d5d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5025ee24-f923-11ea-adbc-576ea241df8d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "43fa188e-2dce-11eb-84c0-835ad1fd6287",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4916eebe-2dce-11eb-84c0-271cb2c672e8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f4-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1c-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7d422c-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba2f2d8-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec69c9ae-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "e2371690-574f-11ec-9b69-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbe76fe-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc8e272-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc821fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb0ad50-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "69e8902a-1cd8-11ed-ad41-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f2161f6-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f208ea2-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841eaad4-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "277f3524-7d61-11ed-9f04-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675704124781,
      "createdOn": undefined,
      "displayName": "Datadog Read Only Role",
      "id": "c69142e2-a642-11ed-a333-da7ad0900005",
      "modifiedAt": 1675704124804,
      "name": "Datadog Read Only Role",
      "userCount": 0,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:c689fed8-a642-11ed-a5ee-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T17:22:04.733Z,
              "modifiedAt": 2023-02-06T17:22:04.768Z,
              "name": "Datadog Standard Role",
              "userCount": 0,
            },
            "id": "c689fed8-a642-11ed-a5ee-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "984d2f00-d3b4-11e8-a200-bb47109e9987",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5e605652-dd12-11e8-9e53-375565b8970e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "62cc036c-dd12-11e8-9e54-db9995643092",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f66600e-dd12-11e8-9e55-7f30fbb45e73",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7d7c98ac-dd12-11e8-9e56-93700598622d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "811ac4ca-dd12-11e8-9e57-676a7f0beef9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "84aa3ae4-dd12-11e8-9e58-a373a514ccd0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "979df720-aed7-11e9-99c6-a7eb8373165a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6831-d3d8-11e9-a77a-4fd230ddbc6a",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "d90f6832-d3d8-11e9-a77a-bf8a2607f864",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "48ef71ea-d8b1-11e9-a77a-93f408470ad0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4d87d5f8-d8b1-11e9-a77a-eb9c8350d04f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1af86ce4-7823-11ea-93dc-d7cad1b1c6cb",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "b382b982-8535-11ea-93de-2bf1bdf20798",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7314eb20-aa58-11ea-95e2-6fb6e4a451d5",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "7b516476-aa58-11ea-95e2-93718cd56369",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "80de1ec0-aa58-11ea-95e2-aff381626d5d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c1680d0-ff6d-11eb-a494-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "9ac1d8cc-e707-11ea-aa2d-73d37e989a9d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301da-ec5c-11ea-aa9f-73bedeab67ee",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301db-ec5c-11ea-aa9f-2fe72193d60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301dd-ec5c-11ea-aa9f-97edfb345bc9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301e4-ec5c-11ea-aa9f-87282b3a50cc",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "07c3c146-f7f8-11ea-acf6-0bd62b9ae60e",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "372896c4-f923-11ea-adbc-4fecd107156d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4628ca54-f923-11ea-adbc-4b2b7f88c5e9",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4ada6e36-f923-11ea-adbc-0788e5c5e3cf",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5025ee24-f923-11ea-adbc-576ea241df8d",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "55f4b5ec-f923-11ea-adbc-1bfa2334a755",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5c6b88e2-f923-11ea-adbc-abf57d079420",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "642eebe6-f923-11ea-adbc-eb617674ea04",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6ba32d22-0e1a-11eb-ba44-bf9a5aafaa39",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "43fa188e-2dce-11eb-84c0-835ad1fd6287",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4916eebe-2dce-11eb-84c0-271cb2c672e8",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "5cbe5f9c-2dce-11eb-84c0-872d3e9f1076",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "61765026-2dce-11eb-84c0-833e230d1b8f",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8106300a-54f7-11eb-8cbc-7781a434a67b",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "98b984f4-b16d-11eb-a2c6-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc211-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20f-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc210-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1c-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "97971c1d-e895-11eb-b13c-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7d422c-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba2f2d8-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "1ba4caa4-16c7-11ec-b77d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "34438974-1703-11ec-9521-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec69c9ae-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "ec6a85f6-4792-11ec-a4e4-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "e2371690-574f-11ec-9b69-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "8dbe76fe-5884-11ec-82c1-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc8e272-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc97610-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc93150-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc821fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "0fc894fc-8500-11ec-9176-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caeae1ea-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "20c31f82-b9b4-11ec-8235-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6df8628a-c59e-11ec-9bfe-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee6d434-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee61788-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb17ed8-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "edb0ad50-173a-11ed-b3c2-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "69e8902a-1cd8-11ed-ad41-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4244b3e6-248a-11ed-96ae-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f2161f6-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f21ab3e-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f208ea2-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4f210b2a-55d9-11ed-9831-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841eaad4-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "841f1d52-7a4c-11ed-bf7d-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f81882c-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8143ee-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f8289ca-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "277f3524-7d61-11ed-9f04-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675704124733,
      "createdOn": undefined,
      "displayName": "Datadog Standard Role",
      "id": "c689fed8-a642-11ed-a5ee-da7ad0900005",
      "modifiedAt": 1675704124768,
      "name": "Datadog Standard Role",
      "userCount": 0,
    },
    Object {
      "_class": Array [
        "AccessRole",
      ],
      "_key": "datadog_role:fbf4ab24-a668-11ed-b70b-da7ad0900005",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Role {
            "attributes": RoleAttributes {
              "createdAt": 2023-02-06T21:55:35.227Z,
              "modifiedAt": 2023-02-06T21:55:35.257Z,
              "name": "J1 Ingestion",
              "userCount": 1,
            },
            "id": "fbf4ab24-a668-11ed-b70b-da7ad0900005",
            "relationships": RoleResponseRelationships {
              "permissions": RelationshipToPermissions {
                "data": Array [
                  RelationshipToPermissionData {
                    "id": "d90f6830-d3d8-11e9-a77a-b3404e5e9ee2",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "4441648c-d8b1-11e9-a77a-1b899a04b304",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "46a301da-ec5c-11ea-aa9f-73bedeab67ee",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "417ba636-2dce-11eb-84c0-6bce5b0d9de0",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "12efc20e-d36c-11eb-a9b8-da7ad0900002",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "aa7ccb44-fa13-11eb-b17c-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "caea6b48-9a59-11ec-b6fc-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "eee67f20-e746-11ec-a905-da7ad0900005",
                    "type": "permissions",
                  },
                  RelationshipToPermissionData {
                    "id": "6f80e6ce-7aff-11ed-836c-da7ad0900005",
                    "type": "permissions",
                  },
                ],
              },
            },
            "type": "roles",
          },
        },
      ],
      "_type": "datadog_role",
      "createdAt": 1675720535227,
      "createdOn": undefined,
      "displayName": "J1 Ingestion",
      "id": "fbf4ab24-a668-11ed-b70b-da7ad0900005",
      "modifiedAt": 1675720535257,
      "name": "J1 Ingestion",
      "userCount": 1,
    },
  ],
  "collectedRelationships": Array [],
  "encounteredTypes": Array [
    "datadog_role",
  ],
  "numCollectedEntities": 4,
  "numCollectedRelationships": 0,
}
`;
